[tool.poetry]
name = "cforgeapi"
version = "0.1.0"
description = "An api client for curseforge API"
authors = ["Quentin Levasseur <32539717+mrquentin@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "cforge_api" },
]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
uplink = "^0.9.7"
pydantic = "^1.10.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
